--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <section>
             <div class="box">
                 <div class="circle">
-                    <h2>Merry<br>Christmas</h2>
+                    <h2>Merry<br>Christmas<br>&#169; Yash Kumar</h2>
                 </div>
             </div>
         </section>
