--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <section>
             <div class="box">
                 <div class="circle">
-                    <h2>Merry<br>Christmas<br>&#169; Yash</h2>
+                    <h2>Merry<br>Christmas<br></h2>
                 </div>
             </div>
         </section>
@@ -37,4 +37,5 @@
             bubbles()
         </script>
     </body>
+    <footer class="footer">&#169;Yash</footer>
 </html>
