--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                 <div class="circle">
                     <h2>Merry<br>Christmas<br></h2>
                 </div>
+                <h4 class="footer">&#169;Yash</h4>
             </div>
         </section>
         <script>
@@ -37,5 +38,5 @@
             bubbles()
         </script>
     </body>
-    <footer class="footer">&#169;Yash</footer>
+<!--    <footer class="footer">&#169;Yash</footer>-->
 </html>
